--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### user custom ###
+/bin/
+
+### .gradle ###
 .gradle
 /build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -24,3 +28,29 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+
+### from java.gitignore ###
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
