--- a/src/main/resources/config/application-default.properties
+++ b/src/main/resources/config/application-default.properties
@@ -11,3 +11,8 @@ logging.config=classpath:config/logback-spring.xml
 ###### web ######
 server.port=9010
 
+###### H2 Web Console (H2ConsoleProperties) ######
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
