--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -2,8 +2,11 @@
 app.name=my-sample-boot-prod
 
 
-
-
+###### db ######
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vslot_simulator?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 
