--- a/src/main/resources/config/application-default.properties
+++ b/src/main/resources/config/application-default.properties
@@ -16,3 +16,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+###### mybatis ######
+#mybatis.config-location=classpath:config/mybatis-config.xml
+  
+  
+  
+  
