mybatis: using mybatis annotation @Mapper

--- a/bin/main/config/application-default.properties
+++ b/bin/main/config/application-default.properties
@@ -16,3 +16,14 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+###### sql ######
+spring.datasource.schema=classpath:db/schema.sql
+spring.datasource.data=classpath:db/data.sql
+
+###### mybatis ######
+mybatis.configuration.map-underscore-to-camel-case=true
+
+  
+  
+  
