--- a/src/main/resources/config/application-default.properties
+++ b/src/main/resources/config/application-default.properties
@@ -17,9 +17,13 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
+###### sql ######
+spring.datasource.schema=classpath:db/schema.sql
+spring.datasource.data=classpath:db/data.sql
+
 ###### mybatis ######
-#mybatis.config-location=classpath:config/mybatis-config.xml
-  
+mybatis.configuration.map-underscore-to-camel-case=true
+
   
   
   
