--- a/bin/main/config/application-default.properties
+++ b/bin/main/config/application-default.properties
@@ -7,6 +7,7 @@ spring.profiles.active=dev
 ###### log ######
 logging.file=logs/${app.name}.log
 logging.config=classpath:config/logback-spring.xml
+logging.level.com.wind.myapp.sample.service=TRACE
 
 ###### web ######
 server.port=9010
