--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -3,10 +3,10 @@ app.name=my-sample-boot-prod
 
 
 ###### db ######
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vslot_simulator?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/vslot_simulator?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 
