--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -12,8 +12,8 @@ logging.config=classpath:config/logback-spring.xml
 server.port=9010
 
 ###### mybatis ######
+mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-  
   
   
