--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -12,7 +12,7 @@ logging.config=classpath:config/logback-spring.xml
 server.port=9010
 
 ###### mybatis ######
-mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
   
