--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -4,7 +4,7 @@ app.name=my-sample-boot-prod
 
 ###### db ######
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/vslot_simulator?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/sample?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 
