--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,13 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+	
+	// ### mybatis ###
+	//compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+	compile('com.baomidou:mybatisplus-spring-boot-starter:1.0.5')
+	compile('com.baomidou:mybatis-plus:2.1.9')
+	
+	
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('com.h2database:h2')
 	runtime('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16')
