app.name --> spring.application.name

--- a/src/main/resources/config/application-test.properties
+++ b/src/main/resources/config/application-test.properties
@@ -1,5 +1,5 @@
 ###### some ######
-app.name=my-sample-boot-test
+spring.application.name=my-sample-boot-test
 
 ###### debug mode ######
 debug=true
