--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,11 +1,11 @@
 ###### some ######
-app.name=my-sample-boot
+spring.application.name=my-sample-boot-default
 
 ###### profile: [dev, prod, test] ######
 spring.profiles.active=dev
 
 ###### log ######
-logging.file=logs/${app.name}.log
+logging.file=logs/${spring.application.name}.log
 logging.config=classpath:config/logback-spring.xml
 
 ###### web ######
