--- a/bin/main/config/application-prod.properties
+++ b/bin/main/config/application-prod.properties
@@ -3,6 +3,7 @@ spring.application.name=my-sample-boot-prod
 
 
 ###### db ######
+##com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/sample?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
