--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	
+	//### mysql
+	compile('mysql:mysql-connector-java:5.1.6')
+	
 	// ### mybatis ###
 	//compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
 	compile('com.baomidou:mybatisplus-spring-boot-starter:1.0.5')
