--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -10,5 +10,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 
-
+#mybatis plus 
+mybatis-plus.global-config.refresh-mapper=false
+mybatis-plus.configuration.cache-enabled=true
 
