--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -21,12 +21,11 @@ mybatis-plus.mapper-locations=classpath:mybatis/mapper/**/*.xml
 mybatis-plus.global-config.id-type=2
 mybatis-plus.global-config.field-strategy=2
 mybatis-plus.global-config.db-column-underline=true
+mybatis-plus.global-config.capital-mode=true
 mybatis-plus.global-config.refresh-mapper=true
 #mybatis-plus.global-config.key-generator=com.baomidou.mybatisplus.incrementer.H2KeyGenerator
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.cache-enabled=false
-
-
 
 
 
