--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -21,7 +21,7 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
-
-
+###### error ######
+server.error.include-stacktrace=always
 
 
