--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -24,4 +24,9 @@ spring.h2.console.settings.web-allow-others=false
 ###### error ######
 server.error.include-stacktrace=always
 
+###### thymeleaf ######
+spring.thymeleaf.cache=false
+
+
+
 
