--- a/build.gradle
+++ b/build.gradle
@@ -27,26 +27,43 @@ repositories {
 
 dependencies {
 	
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('javax.servlet:jstl')
 	
-	//### mysql
+	// ### db ###
+	// mysql
 	compile('mysql:mysql-connector-java:5.1.6')
+	// h2
+	runtime('com.h2database:h2')
+	
 	
 	// ### mybatis ###
+	// mybatis 
 	//compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
-	compile('com.baomidou:mybatisplus-spring-boot-starter:1.0.5')
+	// mybatis-plus (contains mybatis)
 	compile('com.baomidou:mybatis-plus:2.1.9')
+	compile('com.baomidou:mybatisplus-spring-boot-starter:1.0.5')
 	
 	
-	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('com.h2database:h2')
-	runtime('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16')
-	compile('org.projectlombok:lombok')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	
-	//### war ###
+	// ### web ###
+	compile('org.springframework.boot:spring-boot-starter-web')
+	// war
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	providedRuntime('org.apache.tomcat.embed:tomcat-embed-jasper')
+	// jsp
+	compile('javax.servlet:jstl')
+	
+	
+	// ### common ###
+	// devtool
+	runtime('org.springframework.boot:spring-boot-devtools')
+	// sql log
+	runtime('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16')
+	compile('org.projectlombok:lombok')
+	
+	
+	//### test
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	
+	
+	
 	
 }
