--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -25,7 +25,7 @@ spring.h2.console.settings.web-allow-others=false
 server.error.include-stacktrace=always
 
 ###### thymeleaf ######
-#spring.thymeleaf.cache=false
+spring.thymeleaf.cache=false
 
 
 
