fix “Circular view path” exception: using ModelAndView

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -27,4 +27,10 @@ mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.cache-enabled=false
 
 
+###### web-jsp ######
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
+
+
+
 
