catch setting: use "npm run watch"

--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -27,6 +27,9 @@ server.error.include-stacktrace=always
 ###### thymeleaf ######
 spring.thymeleaf.cache=false
 
+###### static content cache ######
+spring.resources.chain.strategy.content.enabled=true
+
 
 
 
