--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -5,6 +5,7 @@
   "author": "mr838wind <mr838wind@gmail.com>",
   "private": true,
   "scripts": {
+    "watch": "cross-env NODE_ENV=development webpack --watch", 
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
