--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -5,11 +5,12 @@
   "author": "mr838wind <mr838wind@gmail.com>",
   "private": true,
   "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack --watch", 
+    "watch": "cross-env NODE_ENV=development webpack --watch",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.3",
     "vuetify": "^1.0.0"
   },
