--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "vue": "^2.5.3",
     "vuetify": "^1.0.0"
   },
